force-app/main/default/objects/Account/fields/Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Location__c</fullName>
    <label>Address Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>