force-app/main/default/objects/Account/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>