force-app/main/default/objects/Account/recordTypes/Clinic.recordType-meta.xml
<RecordType>
    <fullName>Clinic</fullName>
    <active>true</active>
    <label>Clinic</label>
</RecordType>